# waveforms-dasylab-module

./: .gitignore  AI Rec.py  DASYLab Module Test.DSB  Digilent WaveForms Module v2.DSB  Digilent WaveForms Module.DSB  Digilent WaveForms Module.xml  Pipfile  README.md  dasylab_waveforms_test_script.py  digilent_waveforms_dasylab_module.py  symlink.bat  test_module.py
dasylab/: README.md  digilent-package-definition.dlpdef
dasylab/icons/: icon_template.pdn
dasylab/worksheets/: DASYLab Module Test.DSB  Digilent WaveForms Module.DSB
digilent_waveforms/: LICENSE  README.md  __init__.py  pyproject.toml
digilent_waveforms/examples/: AnalogInput_Record.py  AnalogOutIn_DC.py  CloseAllDevices.py  EnumerateDevice.py
digilent_waveforms/src/: Device.py  Manager.py  Types.py
digilent_waveforms/src/components/: AnalogInput.py  AnalogOut.py  DwfAi.py  DwfException.py
digilent_waveforms/src/components/utils/: Logger.py
digilent_waveforms/src/constants/: __init__.py  ai_types.py  ao_types.py  dwf_types.py  dwfconstants.py  error_codes.py
digilent_waveforms_dasylab/: README.md
digilent_waveforms_dasylab/components/: DeviceManager.py  Logger.py
