[project]
name = "digilent_waveforms"
version = "0.0.1"
authors = [
  { name="Digilent Inc." },
]
description = "Python support for Digilent WaveForms devices"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/digilent/digilent-waveforms-py"
Issues = "https://github.com/digilent/digilent-waveforms-py/issues"